--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,12 +25,40 @@
     <string name="add_special_instructions">Special Instructions:</string>
     <string name="add_enter_instructions">Enter Instructions</string>
     <string name="add_enter_dosage">Enter Dosage</string>
+    <string name="add_medication">Add Medication</string>
 
     <string-array name="unit_options">
         <item>Pill</item>
         <item>Drop</item>
         <item>mL</item>
         <item>mg</item>
+    </string-array>
+
+    <string-array name="hours">
+        <item>12am</item>
+        <item>1am</item>
+        <item>2am</item>
+        <item>3am</item>
+        <item>4am</item>
+        <item>5am</item>
+        <item>6am</item>
+        <item>7am</item>
+        <item>8am</item>
+        <item>9am</item>
+        <item>10am</item>
+        <item>11am</item>
+        <item>12pm</item>
+        <item>1pm</item>
+        <item>2pm</item>
+        <item>3pm</item>
+        <item>4pm</item>
+        <item>5pm</item>
+        <item>6pm</item>
+        <item>7pm</item>
+        <item>8pm</item>
+        <item>9pm</item>
+        <item>10pm</item>
+        <item>11pm</item>
     </string-array>
 
     <!-- TODO: Remove or change this placeholder text -->
