--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="action_add_medication">Add</string>
     <string name="nav_menu_cabinet">Medicine Cabinet</string>
     <string name="nav_menu_find">Find Medication</string>
     <string name="nav_menu_schedule">Schedule</string>
@@ -16,9 +17,25 @@
     <string name="activity_pharmacy_map">Pharmacy Map</string>
     <string name="notifications_switch_title">Enable Notifications</string>
     <string name="notifications_switch_summary">Turn notifications on or off for all medication reminders</string>
+    <string name="add_dosage">Dosage</string>
+    <string name="add_food">Take with Food</string>
+    <string name="add_water">Take with Water</string>
+    <string name="add_frequency">Frequency</string>
+    <string name="add_reminder">Remind me on:</string>
+    <string name="add_special_instructions">Special Instructions:</string>
+    <string name="add_enter_instructions">Enter Instructions</string>
+    <string name="add_enter_dosage">Enter Dosage</string>
+
+    <string-array name="unit_options">
+        <item>Pill</item>
+        <item>Drop</item>
+        <item>mL</item>
+        <item>mg</item>
+    </string-array>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="activity_settings">Settings</string>
+    <string name="activity_add_medication">Add</string>
     <string name="password_switch_title">Require Password on Start</string>
     <string name="location_switch_title">Location Services</string>
     <string name="night_switch_title">Night Mode</string>
