updated strings for past and upcoming

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,8 @@
     <string name="add_enter_instructions">Enter Instructions</string>
     <string name="add_enter_dosage">Enter Dosage</string>
     <string name="add_medication">Add Medication</string>
+    <string name="past_button">Past</string>
+    <string name="upcoming_button">Upcoming</string>
 
     <string-array name="unit_options">
         <item>Pill</item>
