added README with sprint updates

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Team project 4
 First Sprint
 Kate Cheney, Anderson Adon, Rachel Rosset, Jake Flynn
 
-Our goals for this sprint were to build a basic skeleton and organize data (medication) into properly scheduled cards. We believed we accomplished
+Overview: Our goals for this sprint were to build a basic skeleton and organize data (medication) into properly scheduled cards. We believed we accomplished
 this goal, as medication can be added and displayed in the schedule and cabinet. 
 
 Features:
