--- a/README
+++ b/README
@@ -22,6 +22,9 @@ Features:
 3. Medicine Cabinet
     - Shows a user their medication. 
     - Also shows a the medicine dosage. 
+    
+Second Sprint
+Jake broke the build. What a dumb guy.
 
 
 
