--- a/README
+++ b/README
@@ -86,6 +86,10 @@ Sprint 2 README
  - Notifications
  - Improve maps functionality
  - TEST!!!!!
+ 
+ Note:
+ For sources, there was a video I watched that explained how to do the searching that was implemented in Add Medication. I searched for this
+ video for quite some time but I cannot find it. Here is a video that generally shows how to do what I did: https://www.youtube.com/watch?v=JB3ETK5mh3c
 
 
 
