--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,4 +121,5 @@
     <string name="title_activity_maps">Map</string>
     <string name="add_med_button">Add Medication</string>
     <string name="medication_name_default">Name</string>
+    <string name="change_medication_button">Change Medication</string>
 </resources>
